# esp-idf-mpu6050-dmp

./: LICENSE  README.md
AK8963_CALIBRATE/: CMakeLists.txt  README.md
AK8963_CALIBRATE/html/: main.js
AK8963_CALIBRATE/main/: Kconfig.projbuild  main.cpp  mpu6050.cpp
GY_KALMAN/: CMakeLists.txt  README.md
GY_KALMAN/main/: mpu6050.cpp
HMC5883L_CALIBRATE/: CMakeLists.txt  README.md
HMC5883L_CALIBRATE/html/: main.css  main.js  root.html
HMC5883L_CALIBRATE/main/: Kconfig.projbuild  main.cpp  mpu6050.cpp  web_client.c
IMU_Detect/: CMakeLists.txt  README.md
IMU_Detect/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  mpu6050.cpp
IMU_Zero/: CMakeLists.txt  README.md
IMU_Zero/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  mpu6050.cpp
MPU6050_DMP6/: CMakeLists.txt  README.md
MPU6050_DMP6/html/: _root.html  main.js
MPU6050_DMP6/main/: Kconfig.projbuild  idf_component.yml  main.cpp  mpu6050.cpp  web_client.c  web_server.c  wifi.c
MPU6050_HMC5883L_KALMAN/: CMakeLists.txt  README.md
MPU6050_HMC5883L_KALMAN/html/: main.js
MPU6050_HMC5883L_KALMAN/main/: main.cpp  (+2 more)
MPU6050_HMC5883L_MADGWICK/: CMakeLists.txt  README.md
MPU6050_KALMAN/: CMakeLists.txt  README.md
MPU6050_KARMAN/: CMakeLists.txt  README.md
MPU6050_MADGWICK/: CMakeLists.txt  README.md
MPU6050_MADGWICK/main/: CMakeLists.txt  main.cpp  mpu6050.cpp  web_server.c
MPU9250_KALMAN/: CMakeLists.txt  README.md
MPU9250_MADGWICK/: CMakeLists.txt  README.md
components/: README.md
components/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  esp-idf.h
panda3d/: README.md  panda.py
(+49 files in other folders)
